# lean-specproof-generator

./: .gitignore  LeanSpecproof.lean  Playground.lean  README.md  driver.py  lake-manifest.json  lakefile.toml  main.py  pyproject.toml  test.ipynb
LeanSpecproof/: Verification.lean
