[project]
name = "lean-specproof"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "lean-interact>=0.10.5",
    "litellm>=1.80.17",
    "pantograph",
    "python-dotenv>=1.2.1",
]

[tool.uv.sources]
pantograph = { git = "https://github.com/stanford-centaur/PyPantograph" }
